correct data in plans table

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -154,31 +154,19 @@ block content
             h4 Управление контентом
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Количество активных уроков
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--profi 
-                  .plans-page__text Неограниченно
-                .plans-page__item.--guru  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--online 
-                  .plans-page__text Неограниченно
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Количество активных курсов
+                .plans-page__name Количество помощниковна курсе (тьюторов)
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__text 0
                 .plans-page__item.--profi 
-                  .plans-page__text 1-10
+                  .plans-page__text Неограниченно
                 .plans-page__item.--guru  
                   .plans-page__text Неограниченно
                 .plans-page__item.--online 
                   .plans-page__text Неограниченно
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Автоматическая и ручная проверка домашних заданий
+                .plans-page__name Перенос уроков с одного аккаунта на другой
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__check
@@ -190,7 +178,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Реализация смешанного обучения (онлайн, очно и дистанционно)
+                .plans-page__name Готовые методические шаблоны для уроков
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__check
@@ -202,7 +190,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Конструктор контента с 15+ интерактивными инструментами
+                .plans-page__name Защита видео от скачивания
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__check
@@ -214,7 +202,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Выгрузка отчётов по уроку и курсу в Excel-формате
+                .plans-page__name Автоматический сбор и выгрузка аналитики прохождений
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__check
@@ -226,7 +214,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Проведение вебинаров с помощью ZOOM
+                .plans-page__name Техническая поддержка 24/7
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
@@ -238,7 +226,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Запуск синхронных курсов
+                .plans-page__name Одновременное создание контента в аккаунте с несколькими пользователями
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
@@ -246,6 +234,42 @@ block content
                   .plans-page__check
                 .plans-page__item.--guru  
                   .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Бесплатный перенос контента на Coreapp с других платформ
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__check
+                .plans-page__item.--guru  
+                  .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Независимая от платформы база пользователей
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Выдача сертификатов и дипломов
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
                 .plans-page__item.--online 
                   .plans-page__check
             .plnas-page__bottom 
@@ -257,79 +281,20 @@ block content
             h4 Маркетинг и платежи
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Количество активных уроков
+                .plans-page__name Прием платежей: Юкаса, Robokasa
               .plans-page__right
                 .plans-page__item.--base  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--profi 
-                  .plans-page__text Неограниченно
-                .plans-page__item.--guru  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--online 
-                  .plans-page__text Неограниченно
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Количество активных курсов
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__text 0
-                .plans-page__item.--profi 
-                  .plans-page__text 1-10
-                .plans-page__item.--guru  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--online 
-                  .plans-page__text Неограниченно
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Автоматическая и ручная проверка домашних заданий
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
+                  .plans-page__none
                 .plans-page__item.--profi 
                   .plans-page__check
                 .plans-page__item.--guru  
                   .plans-page__check
                 .plans-page__item.--online 
                   .plans-page__check
+            
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Реализация смешанного обучения (онлайн, очно и дистанционно)
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Конструктор контента с 15+ интерактивными инструментами
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Выгрузка отчётов по уроку и курсу в Excel-формате
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Проведение вебинаров с помощью ZOOM
+                .plans-page__name Подключение онлайн-кассы Coreapp по 54 ФЗ за 1 день
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
@@ -341,7 +306,7 @@ block content
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Запуск синхронных курсов
+                .plans-page__name Возможность отправлять триггеры в другие сервисы с помощью web-хуков
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
@@ -349,6 +314,54 @@ block content
                   .plans-page__check
                 .plans-page__item.--guru  
                   .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Интеграция с чат-ботами Salebot, Bothelp
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__check
+                .plans-page__item.--guru  
+                  .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Создание витрины курсов на платформе
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__check
+                .plans-page__item.--guru  
+                  .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Прием оплаты от юр.лиц
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Интеграция CRM, рассылок, SAP, 1C
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
                 .plans-page__item.--online 
                   .plans-page__check
             .plnas-page__bottom 
@@ -360,98 +373,50 @@ block content
             h4 Кастомизация
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Количество активных уроков
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--profi 
-                  .plans-page__text Неограниченно
-                .plans-page__item.--guru  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--online 
-                  .plans-page__text Неограниченно
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Количество активных курсов
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__text 0
-                .plans-page__item.--profi 
-                  .plans-page__text 1-10
-                .plans-page__item.--guru  
-                  .plans-page__text Неограниченно
-                .plans-page__item.--online 
-                  .plans-page__text Неограниченно
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Автоматическая и ручная проверка домашних заданий
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Реализация смешанного обучения (онлайн, очно и дистанционно)
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Конструктор контента с 15+ интерактивными инструментами
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Выгрузка отчётов по уроку и курсу в Excel-формате
-              .plans-page__right
-                .plans-page__item.--base  
-                  .plans-page__check
-                .plans-page__item.--profi 
-                  .plans-page__check
-                .plans-page__item.--guru  
-                  .plans-page__check
-                .plans-page__item.--online 
-                  .plans-page__check
-            .plans-page__flex
-              .plans-page__left
-                .plans-page__name Проведение вебинаров с помощью ZOOM
+                .plans-page__name Настройка собственного уникального дизайн-решения уроков и курсов
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
                 .plans-page__item.--profi 
-                  .plans-page__check
+                  .plans-page__none
                 .plans-page__item.--guru  
                   .plans-page__check
                 .plans-page__item.--online 
                   .plans-page__check
             .plans-page__flex
               .plans-page__left
-                .plans-page__name Запуск синхронных курсов
+                .plans-page__name Подключение собственного домена
               .plans-page__right
                 .plans-page__item.--base  
                   .plans-page__none
                 .plans-page__item.--profi 
-                  .plans-page__check
+                  .plans-page__none
                 .plans-page__item.--guru  
                   .plans-page__check
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Кастомизация системных email-писем
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
+                .plans-page__item.--online 
+                  .plans-page__check
+            .plans-page__flex
+              .plans-page__left
+                .plans-page__name Мобильное приложение
+              .plans-page__right
+                .plans-page__item.--base  
+                  .plans-page__none
+                .plans-page__item.--profi 
+                  .plans-page__none
+                .plans-page__item.--guru  
+                  .plans-page__none
                 .plans-page__item.--online 
                   .plans-page__check
             .plnas-page__bottom 
