--- a/src/views/_includes/blocks/footer.pug
+++ b/src/views/_includes/blocks/footer.pug
@@ -146,5 +146,19 @@ button#open_friday_popup.--openpopup(data-popup="friday")
           picture.popup-friday-banner
             source(media="(min-width: 680px)", srcset="./assets/img/banners/friday-desctop.png")
             img(src="./assets/img/banners/friday-mobile.png", alt="black friday")
+
+
+button#open_ny_popup.--openpopup(data-popup="ny")
+
+.popup-bg(data-popup="ny",onclick="")             
+.popup(data-popup="ny")
+  .popup-container
+    .popup-content
+      .popup-newyear
+        .popup-close.popup-close-white(onclick="")
+        a(href="#") 
+          picture.popup-friday-banner
+            source(media="(min-width: 680px)", srcset="./assets/img/banners/ny-popup.png, ./assets/img/banners/ny-popup@2x.png 2x")
+            img(src="./assets/img/banners/ny-popup-mobile.png", srcset="./assets/img/banners/ny-popup-mobile@2x.png 2x",  alt="black friday")
         
         
