--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -310,7 +310,8 @@ block content
           .plans__bottom 
             .plans__price 0 ₽ / месяц
             a.plans__btn(href="https://coreapp.ai/app/teach/") Выбрать
-        .plans__item.--profi.--black-friday
+        .plans__item.--profi.--new-year
+          .plans__item-ny-sticker Скидка <br> 40% на год
           .plans__top
             .plans__title
               img(src="assets/img/plans/profi.svg", alt="") 
@@ -335,7 +336,8 @@ block content
               .plans__price-old от 990 ₽ / мес.
             .plans__sale.plans__sale-profi от 540 ₽/мес.*
             a.plans__btn(href="https://coreapp.ai/app/combined/") Выбрать
-        .plans__item.--guru.--black-friday
+        .plans__item.--guru.--new-year
+          .plans__item-ny-sticker Вечная подписка
           .plans__top
             .plans__title
               img(src="assets/img/plans/guru.svg", alt="") 
@@ -351,7 +353,7 @@ block content
           .plans__bottom 
             .plans__price
               .plans__price-old 14 000 ₽ / месяц
-            .plans__sale.plans__sale-guru от 540 ₽/мес.*
+            .plans__sale.plans__sale-guru от 6 300 ₽/мес.*
             a.plans__btn(href="https://coreapp.ai/app/combined?plan=guru") Выбрать
         .plans__item.--online
           .plans__top
